added css and unordered list

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <html>
 	<head>
 		<title>Garlic Fry</title>
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 	<body>
-		<h5> Official Garlic Fry Ranking</h5>
-		<li> 
-			<ul>Gott's Roadside</ul>
-			<ul>Gordon Biersche</ul>
-			<ul>Super Duper Burger</ul>
-			<ul>McDonal's Gilroy Garlic Fries</ul>
-		</li>
+		<h1> Official Garlic Fry Ranking</h1>
+		<ol>
+			<li>Gott's Roadside</li>
+			<li>Gordon Biersche</li>
+			<li>Super Duper Burger</li>
+			<li>McDonald's Gilroy Garlic Fries</li>
+		</ol>> 
+		<p>To be continued...</p>
 	</body>
 </html>
