--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html>
 	<head>
 		<title>Garlic Fry</title>
@@ -7,12 +6,14 @@
 	</head>
 	<body>
 		<h1> Official Garlic Fry Ranking</h1>
-		<ol>
-			<li>Gott's Roadside</li>
-			<li>Gordon Biersche</li>
-			<li>Super Duper Burger</li>
-			<li>McDonald's Gilroy Garlic Fries</li>
-		</ol>> 
-		<p>To be continued...</p>
+                <div>
+                    <ol>
+                            <li>Gott's Roadside</li>
+                            <li>Gordon Biersche</li>
+                            <li>Super Duper Burger</li>
+                            <li>McDonald's Gilroy Garlic Fries</li>
+                    </ol> 
+                    <p>To be continued...</p>
+                </div>
 	</body>
 </html>
